@@ -1,6 +1,6 @@
 ### NOTE: SETTABLE_CONFIG
 INSTALL_LOCATION ?= ../../buildroot-2016.11.1-x86_64
-KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.7/buildroot-2016.11.1-x86_64
+KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.8/buildroot-2016.11.1-x86_64
 
 
 # ===============================================================
