@@ -1,6 +1,6 @@
 ### NOTE: SETTABLE_CONFIG
 INSTALL_LOCATION ?= ../../rhel6-x86_64
-KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.7/rhel6-x86_64
+KERNEL_MODULE_EVRMA ?= /afs/slac/g/lcls/package/linuxKernel_Modules/evrmaDriver/R1.0.8/rhel6-x86_64
 
 include ../../src/Makefile.common
 
